--- a/parcel-frontend/style/stylesheet.css
+++ b/parcel-frontend/style/stylesheet.css
@@ -39,19 +39,18 @@ nav ul hover{
 }
 
  footer{
-padding: 1em;
-bottom: 0px;
-width: 100%;
-left: 0px;
-position: fixed;
-background-color: #666;
-color: #fff;
-text-align: center;
+    padding: .6em;
+    bottom: 0px;
+    width: 100%;
+    left: 0px;
+    position: fixed;
+    background-color: #666;
+    color: #fff;
+    text-align: center;
 } 
 
 button{
-background-color: #666;
-color: #fff;
-display: inline-block;
-
+    background-color: #666;
+    color: #fff;
+    display: inline-block;
 }
